<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".activities.CreateTaskActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/screen_margin_horizontal"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_semibold"
                android:text="@string/create_task"
                android:textSize="36sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/saveCreateTaskButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/save"
                android:textSize="15sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/titleEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@drawable/style_create_task"
            android:hint="@string/title"
            android:inputType="textCapSentences|textMultiLine"
            android:isScrollContainer="true"
            android:maxLength="400"
            android:maxLines="4"
            android:paddingVertical="15dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:singleLine="false"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/importantSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/important"
                android:textSize="20sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#00000000" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/urgentSwitch"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urgent"
                android:textSize="20sp" />
        </LinearLayout>

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/style_create_task"
            android:fontFamily="@font/inter"
            android:gravity="top"
            android:hint="@string/description"
            android:inputType="textCapSentences|textMultiLine"
            android:isScrollContainer="true"
            android:maxLength="2000"
            android:paddingVertical="15dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:singleLine="false"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/subTaskLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/addTaskButtonLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/inter"
                android:text="@string/add_sub_task"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/addNotificationButtonLL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="5dp"
                android:src="@drawable/ic_add" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/inter"
                android:text="@string/add_notification"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/notificationLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/style_create_task"
            android:orientation="vertical"
            android:paddingVertical="20dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="24dp"
                android:paddingEnd="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:textSize="20sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <ImageButton
                    android:id="@+id/closeNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:src="@drawable/ic_close" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp">

                <TextView
                    android:id="@+id/date"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_create_task_dark"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text=""
                    android:textSize="18sp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/style_create_task_dark"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text=""
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingHorizontal="15dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/sun"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/style_create_task_circle"
                    android:gravity="center"
                    android:text="@string/sun" />

                <TextView
                    android:id="@+id/mon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/style_create_task_circle"
                    android:gravity="center"
                    android:text="@string/mon" />

                <TextView
                    android:id="@+id/tue"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/style_create_task_circle"
                    android:gravity="center"
                    android:text="@string/tue" />

                <TextView
                    android:id="@+id/wed"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/style_create_task_circle"
                    android:gravity="center"
                    android:text="@string/wed" />

                <TextView
                    android:id="@+id/thu"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/style_create_task_circle"
                    android:gravity="center"
                    android:text="@string/thu" />

                <TextView
                    android:id="@+id/fri"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/style_create_task_circle"
                    android:gravity="center"
                    android:text="@string/fri" />

                <TextView
                    android:id="@+id/sat"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:background="@drawable/style_create_task_circle"
                    android:gravity="center"
                    android:text="@string/sat" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>