<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/screen_margin_horizontal"
    tools:context=".activities.ForgetPassword">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="450dp"
        android:scaleType="centerCrop"
        android:src="@drawable/vct_dog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/inter_bold"
        android:text="@string/forget_password"
        android:textSize="30sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter"
        android:gravity="center_horizontal"
        android:text="@string/forgot_password_reset_instructions"
        android:textSize="16sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:autofillHints="name"
        android:background="@drawable/style_edit_text_bg"
        android:drawableStart="@drawable/ic_mail"
        android:drawablePadding="10dp"
        android:fontFamily="@font/inter"
        android:hint="@string/email"
        android:padding="15dp"
        android:textSize="18sp" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="2" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="67dp"
        android:backgroundTint="@color/md_theme_light_shadow"
        android:fontFamily="@font/inter_medium"
        android:paddingVertical="12dp"
        android:text="@string/send"
        android:textSize="20sp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="32dp"
        android:visibility="gone" />
</LinearLayout>